# DNS-Applayer-DDoS-Protection

./: CITATION.cff  Cargo.toml  LICENSE  README.md  pyproject.toml  rust-toolchain  rustfmt.toml  sample-config.jsonc
crates/evaluation/: Cargo.toml  sqlx-data.json
crates/evaluation/src/: lib.rs
crates/netflow/: Cargo.toml  sqlx-data.json
crates/netflow/src/: aggregate.rs  lib.rs
datasets/: README.md  mirai-2022-2022-19-ipcount.json.xz  mirai-2022-2022-19.json.xz  mirai-2022-2022-20-ipcount.json.xz  mirai-2022-2022-20.json.xz  mirai-2022-2022-21-ipcount.json.xz  mirai-2022-2022-21.json.xz  mirai-2022-2022-22-ipcount.json.xz  mirai-2022-2022-22.json.xz  mirai-2022-2022-23-ipcount.json.xz  mirai-2022-2022-23.json.xz  mirai-2022-all-ips-ipcount.json.xz  mirai-2022-all-ips.json.xz  open-resolver-equal-encoded-traffic.json.xz  open-resolver-equal-source-traffic.json.xz  sality-20220628.json.xz
notebooks/: churn.py  common_functions.py  evasion.py  query-rate.py  traffic-fpr-relation.py
sql/: allowlist.sql  peak-rate.sql  postgres-schema.sql  pre-test-intervals.sql  traffic-interval.sql
src/ddos_filtering/: __init__.py
