[package]
edition = "2021"
name = "evaluation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre.workspace = true
env_logger.workspace = true
futures.workspace = true
indicatif.workspace = true
ipnetwork.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
tokio.workspace = true
rayon.workspace = true
walkdir.workspace = true
rand.workspace = true
rand_chacha.workspace = true
