[package]
edition = "2021"
name = "netflow"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
monostate.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
sqlx.workspace = true
tokio.workspace = true
